--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-map-gl": "^5.2.9",
+    "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
-    "react-tooltip": "^4.2.10"
+    "react-tooltip": "^4.2.10",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
